--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+
+  intl: any
   get: ^4.6.1
   sqflite: ^2.0.2
   rflutter_alert: ^2.0.4
   flutter_typeahead: ^3.2.4
   flutter_beep: ^1.0.0
   provider: ^6.0.2
-  dio: ^4.0.6
+  dio: ^5.3.2
 
   shared_preferences: ^2.0.13
 
@@ -48,7 +52,7 @@ dependencies:
   open_file: ^3.2.1
 
   #restartApp
-  restart_app: ^1.1.0
+  restart_app: ^1.2.1
 
   #wave animation loading
   flutter_spinkit: ^5.1.0
@@ -64,7 +68,7 @@ dependencies:
 
   # Qr Code
   qr_flutter: ^4.0.0
-  qr_code_scanner: ^0.7.0 #// got an error after flutter 3.
+  qr_code_scanner: ^1.0.1 #// got an error after flutter 3.
   # qr_code_scanner:
   #   git:
   #     url: https://github.com/xeinebiu/qr_code_scanner.git
@@ -76,20 +80,21 @@ dependencies:
   esc_pos_utils: ^1.1.0
 
   #google
-  google_sign_in: ^5.3.0
-  googleapis: ^8.1.0
+  google_sign_in: ^6.0.2
+  googleapis: ^10.1.0
   #googleapis_auth: ^0.2.11
 
   # firebase
-  firebase_auth: ^3.2.0
-  firebase_core: ^1.16.0
-  firebase_storage: ^10.2.15
+  firebase_auth: ^4.3.0
+  firebase_core:
+  firebase_storage: ^11.0.16
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  month_picker_dialog: ^0.4.0
+  month_picker_dialog: ^2.0.2
 
+  google_fonts:
 
 
 dev_dependencies:
@@ -97,7 +102,7 @@ dev_dependencies:
     sdk: flutter
     #icon launcher
 
-  flutter_launcher_icons: "^0.9.2"
+  flutter_launcher_icons: ^0.11.0
 
 flutter_icons:
   android: "launcher_icon"
